--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html" />
-
+    <include src="./partials/example.html"></include>
+    
     <script src="/src/mobile-menu.js"></script>
   </body>
 </html>
