--- a/src/products.html
+++ b/src/products.html
@@ -1,29 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <section>
-        <p>100% natural</p>
-        <h2>Products</h2>
-        <ul>
-            <li>
-                <h3>Ice cream</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-            </li>
-            <li>
-                <h3>Ice coffee</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-            </li>
-            <li>
-                <h3>milkshakes</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-            </li>
-        </ul>
-    </section>
-</body>
-</html>
+
+    <section class="products">
+        <div class="container">
+            <p>100% natural</p>
+            <h2>Products</h2>
+            <ul>
+                <li>
+                    <img href="" />
+                    <h3>Ice cream</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                </li>
+                <li>
+                    <h3>Ice coffee</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                </li>
+                <li>
+                    <h3>milkshakes</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                </li>
+            </ul>
+    </div>
+</section>
