--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    
+    <include src="./partials/about.html" />
     <include src="./partials/example.html" />
+    
 
     <script src="/src/mobile-menu.js"></script>
   </body>
