--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html" />
     <include src="./partials/example.html" />
 
-    <script src="/src/js/mobile-menu.js"></script>
     <script src="/src/js/modal-menu.js"></script>
   </body>
 </html>
