--- a/src/index.html
+++ b/src/index.html
@@ -10,62 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/index.min.css" />
+    <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <footer>
-      <div class="container footer-section">
-        <div class="footer-container">
-          <div>
-            <ul>
-              <li class="footer-list">
-                <b class="footer-text">homemade ice cream<br />made</b>
-              </li>
-              <li class="footer-list">
-                <a class="footer-logo" href="">with<br />passion</a>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <address>
-              <ul class="socials-footer">
-                <li class="socials-footer__item">
-                  <a class="socials-footer__link" href="">
-                    <svg class="socials__icon" width="32" height="32">
-                      <use href="./images/icon/icon.svg#github"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="socials-footer__item">
-                  <a class="socials-footer__link" href="">
-                    <svg class="socials__icon" width="32" height="32">
-                      <use href="./images/icon/icon.svg#telegram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="socials-footer__item">
-                  <a class="socials-footer__link" href="">
-                    <svg class="socials__icon" width="32" height="32">
-                      <use href="./images/icon/icon.svg#facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-              <a class="contacts-footer" href="tel:+61 (0) 383 766 284"
-                >Feel free to contact
-                <span class="contacts-footer__tel">+61 (0) 383 766 284</span></a
-              >
-            </address>
-          </div>
-        </div>
-        <p class="ice-cream-footer">
-          © 2019 - IceCream.<br />All Rights Reserved.
-        </p>
-      </div>
-    </footer>
-
+    <include src="./partials/footer.html" />
     <include src="./partials/example.html" />
     <script src="/src/mobile-menu.js"></script>
   </body>
