--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/header.html" />
-    <include src="./partials/advantages.html" />
+    <include src="./partials/header.html"></include>
+    <include src="./partials/advantages.html"></include>
 
 
     <script src="/src/js/modal-menu.js"></script>
