--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <include src="./partials/hero-header.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/advantages.html"></include>
-    <include src="./partials/gallery.html" />
+    <include src="./partials/gallery.html"></include>
     <script src="/src/js/modal-menu.js"></script>
 
   </body>
