--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,18 @@
     <script type="module" src="./js/index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-    <include src="./partials/products.html"></include>
-    <script src="/src/mobile-menu.js"></script>
     <!-- ❗️❗️❗️ Add partials like so for every page --> 
     <include src="./partials/header.html"></include>
     <include src="./partials/hero-header.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
-    <script src="/src/js/modal-menu.js"></script>
+    <include src="./partials/customer-reviews.html"></include>
 
+    <script src="/src/js/modal-menu.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </body>
 </html>
