--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page --> 
     <include src="./partials/header.html"></include>
     <include src="./partials/hero-header.html"></include>
+    <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
