--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,10 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero-header.html"></include>
     <include src="./partials/about.html"></include>
-    <include src="./partials/advantages.html"></include>
+    <include src="./partials/advantages.html"></include> 
 
     <script src="/src/js/modal-menu.js"></script>
+    <script src="/src/js/about-modal.js"></script>
 
   </body>
 </html>
