--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
-  <body class=" " body-menu>
+  <body class=" " body-menu modal-open>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/hero-header.html"></include>
     <include src="./partials/products.html"></include>
